<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Родительский POM-проект, который предоставляет стандартные настройки для Spring Boot проектов -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/> <!-- указывает, что родительский POM-файл должен быть найден в репозитории, а не в локальной файловой системе -->
    </parent>

    <!--change artefact id-->
    <!-- Координаты проекта -->
    <groupId>io.hohichh.marketplace</groupId>
    <artifactId>gateway</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging> <!-- Упаковка проекта в JAR-файл -->

    <!--change name-->
    <!-- Информация о проекте -->
    <name>api-gateway</name>
    <description>gateway service</description>

    <!--    change project name!!!-->
    <!-- Свойства проекта -->
    <properties>
        <java.version>22</java.version> <!-- Версия Java, используемая в проекте -->
        <!-- Настройки для SonarQube - платформы для анализа качества кода -->
        <sonar.organization>marketplace-internship-project</sonar.organization>
        <sonar.projectKey>Marketplace-internship-project_api-gateway</sonar.projectKey>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.reporting.outputDirectory}/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version> <!-- Версия MapStruct -->
<!--        Исключение директорий для анализа sonar-->
        <sonar.coverage.exclusions>
            **/dto/**,
            **/model/**,
            **/exception/**,
            **/config/**,
            **/mapper/**,
            **/security/**,
            **/*Application.java
        </sonar.coverage.exclusions>
    </properties>

    <!-- Зависимости проекта -->
    <dependencies>

        <!-- Основные зависимости Spring Boot для создания веб-приложений -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId> <!-- Добавляет конечные точки для мониторинга и управления приложением (например, /health, /metrics). -->
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId> <!-- Стартер для использования валидации бинов (JSR-380). -->
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.12.5</version> </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.12.5</version>
            <scope>runtime</scope>
        </dependency>


        <!-- Утилиты для разработки -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId> <!-- Библиотека, которая позволяет сократить написание шаблонного кода (геттеры, сеттеры, конструкторы и т.д.) с помощью аннотаций. -->
            <optional>true</optional> <!-- Зависимость не является транзитивной. -->
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId> <!-- Процессор аннотаций для генерации метаданных для кастомных properties в application.properties/yml, что обеспечивает автодополнение в IDE. -->
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId> <!-- Инструменты для разработки, которые обеспечивают автоматический перезапуск приложения при изменениях кода. -->
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- Зависимости для тестирования -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId> <!-- Основной стартер для тестирования Spring Boot приложений. Включает JUnit, Mockito и другие полезные библиотеки. -->
            <scope>test</scope> <!-- Зависимость используется только для тестирования. -->
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId> <!-- Простая реализация SLF4J для логирования в тестах. -->
            <version>2.0.7</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver</artifactId>
            <version>4.12.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-gateway</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2025.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Секция сборки проекта -->
    <build>
        <plugins>
            <!-- Плагин для запуска юнит-тестов -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <!-- Аргумент для JVM при запуске тестов, необходимый для работы некоторых библиотек с рефлексией в новых версиях Java. -->
                    <argLine>${argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <!-- Плагин для сборки исполняемого JAR-файла Spring Boot -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <!-- Исключает Lombok из конечного JAR-файла, так как он нужен только на этапе компиляции. -->
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Плагин для запуска интеграционных тестов -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal> <!-- Запускает интеграционные тесты. -->
                            <goal>verify</goal> <!-- Проверяет результаты интеграционных тестов. -->
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Плагин для интеграции с SonarQube -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>5.0.0.4389</version>
            </plugin>

            <!-- Плагин для компиляции Java-кода -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <!-- Настройка процессоров аннотаций для MapStruct и Lombok, чтобы они работали вместе. -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Плагин для сбора информации о покрытии кода тестами -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <!-- Подготавливает JaCoCo агент для сбора данных о покрытии во время выполнения тестов. -->
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase> <!-- Фаза жизненного цикла Maven, на которой генерируется отчет. -->
                        <goals>
                            <!-- Генерирует отчет о покрытии кода тестами. -->
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
